# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ximage"
description = "xarray-based tools for image/video processing"
readme = "README.md"
authors = [
	{ name = "Gionata Ghiggi", email = "gionata.ghiggi@epfl.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["image", "video", "labelling", "patch", "extraction"]
dependencies = [
    "xarray",
    "dask",
    "dask-image",
    "matplotlib",
    "scikit-image",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit", "loghub",
       "black", "black[jupyter]", "blackdoc", "ruff", "codespell",
       "pytest", "pytest-cov", "pytest-mock", "pydantic",
       "pip-tools", "bumpver", "twine",
       "setuptools>=61.0.0", "wheel",
       "sphinx", "sphinx-gallery", "sphinx_rtd_theme", "nbsphinx"]

[project.urls]
homepage = "https://github.com/ghiggi/ximage"
repository = "https://github.com/ghiggi/ximage"
source = "https://github.com/ghiggi/ximage"
tracker = "https://github.com/ghiggi/ximage/issues"
documentation = "https://x-image.readthedocs.io/"
changelog = "https://github.com/ghiggi/ximage/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "ximage/_version.py"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["ximage*"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"

[tool.black]
line-length = 120

# skip-string-normalization = true
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.ruff]

line-length = 120
indent-width = 4

# Addional file to be formatted by ruff (in addition to *py)
extend-include = ["*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]

select = [
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-quotes
    "Q",
    # flake8-bugbear
    "B",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-raise
    "RSE",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # Perflint
    "PERF",
    # pandas-vet
    "PD",
    # pylint
    "PL",
    # flake8-commas
    "COM",
    # flake8-slots
    "SLOT",
    # flake8-comprehensions
    "C4",
    # Ruff custom rules
    "RUF",
    # NumPy-specific rules  (for 2.0)
    "NPY",
    #---------------------
    #### Future rules ####
    # flake8-use-pathlib
    # "PTH",
    # refurb
    # "FURB", # require preview
]
ignore = [
    "E722",
    "PT011", # pytest raised error must be checked if match the expected error msg
    "PERF203",
    "B904",

    # Docstyle Rules
    "D404", # Docstring can't start with "This"
    "D401", # First sentence must be in imperative mood

    # Complexity rules
    "PLR0913",
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "PLC0415",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]

# Ignore `E402` (import violations) in all Jupyter Notebooks.
"*.ipynb" = ["E402"]

# Rules to ignore in test files
"test_*.py" = [
    "ARG",  # avoid problems with fixtures
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
]
"setup.py" = ["D100"]
"*__init__.py" = ["D104"]

[tool.doc8]
ignore-path = [
    "docs/build",
    "docs/api/generated",
    "docs/_templates",
    "docs/tutorials",
    "docs/examples",
]
file-encoding = "utf8"
max-line-length = 120
ignore = ["D001"]

[tool.codespell]
    ignore-words-list = 'nD'
